[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
anyhow = "1.0"

[package.metadata.raze.binary_deps]
cxxbridge-cmd = "1.0.32"

[package.metadata.raze.crates.cxxbridge-cmd.'*']
extra_aliased_targets = [
    "cargo_bin_cxxbridge"
]

[package.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "."
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"
